--- a/README
+++ b/README
@@ -1,41 +1,26 @@
-Welcome to Gutenprint 5.1.7!  Please read these notes carefully.
+Welcome to Gutenprint 5.2.0-beta1!  Please read these notes carefully.
 
-*** NOTE TO PACKAGERS: This is a DEVELOPMENT version of Gutenprint.
-    It should not be packaged as the principal release of Gutenprint
-    in any OS or distribution release.  The most recent stable release
-    (the release with the second number being even -- for example,
-    5.0.1) should be used for that.
-
-    If you need a bug fix from the development release, you should
-    backport it to the stable release if possible.  If you really
-    think you need the development release, please contact us at
-    gimp-print-devel@lists.sourceforge.net well in advance of your
-    packaging deadline to discuss your particular needs with us.  We
-    normally back port bug fixes from the development release to the
-    next stable release, and we back port new printers and new
-    capabilities if we determine it's safe to.
-
-    By all means feel free to deliver this release as a
-    "gutenprint-unstable" release if you want to make bleeding edge
-    packages available as an option.
+*** NOTE TO PACKAGERS: This is a beta release of the forthcoming 5.2
+    stable release.  As of 5.2 and until further notice, Gutenprint
+    will no longer deliver separate "development" and "stable" release
+    series.
 
 ================================================================
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.1.7, a development release of
-    Gutenprint 5.1 that will eventually lead to Gutenprint 5.2.
-    Gutenprint, formerly named Gimp-Print, is a suite of printer
-    drivers that may be used with most common UNIX print spooling
-    systems, including CUPS, lpr, LPRng, or others.  These drivers
-    provide high quality printing for UNIX (including Macintosh OS X
-    10.2 and newer) and Linux systems in many cases equal to or better
-    than proprietary vendor-supplied drivers.  Gutenprint also
-    includes an enhanced print plug-in for the GIMP image editor,
-    replacing the Gimp-Print 4.2-based plugin supplied with GIMP 1.2,
-    2.0, and 2.2, and offering an alternative with additional
-    capabilities to the GtkPrint-based plugin supplied with GIMP 2.4
-    and beyond.
+    This is Gutenprint version 5.2.0-beta1, a beta release of
+    Gutenprint 5.2.  Gutenprint, formerly named Gimp-Print, is a suite
+    of printer drivers that may be used with most common UNIX print
+    spooling systems, including CUPS, lpr, LPRng, or others.  These
+    drivers provide high quality printing for UNIX (including
+    Macintosh OS X 10.2 and newer) and Linux systems in many cases
+    equal to or better than proprietary vendor-supplied drivers.
+    Gutenprint also includes an enhanced print plug-in for the GIMP
+    image editor, replacing the Gimp-Print 4.2-based plugin supplied
+    with GIMP 1.2, 2.0, and 2.2, and offering an alternative with
+    additional capabilities to the GtkPrint-based plugin supplied with
+    GIMP 2.4 and beyond.
 
     Gutenprint has been renamed in order to clearly distinguish it
     from GIMP.  While this package started out as the Print plugin for
@@ -135,7 +120,7 @@ A) OVERVIEW
 	gimp-print-devel@lists.sourceforge.net
 
 	================================================================
-	  Release: gutenprint 5.1.7 generated on 02 Mar 2008
+	  Release: gutenprint 5.1.98.1 generated on 12 Apr 2008
 
 	  Features:
 	    Build CUPS:                                 yes, installing in /usr
@@ -157,12 +142,12 @@ A) OVERVIEW
 	    Installation prefix:                        /usr/local
 	    Data directory:                             /usr/local/share/gutenprint
 	    Library directory:                          /usr/local/lib/gutenprint
-	    XML data directory:                         /usr/local/share/gutenprint/5.1.7/xml
-	    Module directory:                           /usr/local/lib/gutenprint/5.1.7/modules
+	    XML data directory:                         /usr/local/share/gutenprint/5.1/xml
+	    Module directory:                           /usr/local/lib/gutenprint/5.1/modules
 	    Install sample images:                      yes
 
 	General configuration:
-	    Compiler options:                           -Disfinite=finite  -O6  -Wall -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wwrite-strings -Werror-implicit-function-declaration -Winline -Wformat=2 -finline-limit=1048576 -pedantic -Waggregate-return -Wcast-qual -Wshadow -Wredundant-decls
+	    Compiler options:                           -Disfinite=finite  -O6  -Wall -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wwrite-strings -Werror-implicit-function-declaration -Winline -Wformat=2 -finline-limit=131072 -pedantic -Waggregate-return -Wcast-qual -Wshadow -Wredundant-decls
 	    Build static libraries:                     yes
 	    Build shared libraries:                     no
 	    Maintainer mode:                            yes
@@ -213,13 +198,10 @@ B) CORE DRIVER LIBRARY
       Gutenprint.
 
     * Gutenprint permits installation of Gimp-Print 4.2 and Gutenprint
-      5.0 alongside Gutenprint 5.1, and in the future will permit
+      5.0 alongside Gutenprint 5.2, and in the future will permit
       concurrent installation of different stable versions of
-      Gutenprint with different minor version numbers.  Gutenprint
-      uses the old-style kernel numbering system, whereby even
-      numbered minor versions are stable (4.2, 5.0, 5.2) and odd
-      numbered minor versions are development (4.3, 5.1).  Therefore,
-      you should consider allowing Gutenprint 5.0, Gutenprint 5.1, and
+      Gutenprint with different minor version numbers.  Therefore, you
+      should consider allowing Gutenprint 5.0, Gutenprint 5.2, and
       Gimp-Print 4.2 to be installed concurrently.
 
     * The core driver library component also includes locale files for
@@ -233,7 +215,7 @@ B) CUPS
     Gutenprint may be used as a driver under CUPS (Common UNIX
     Printing System), if your system uses that spooler.  Full
     description of CUPS is beyond the scope of this README file; full
-    information may be found at http://www.cups.org.  Gutenprint 5.1
+    information may be found at http://www.cups.org.  Gutenprint 5.2
     requires CUPS 1.1.9 or higher.  We recommend use of 1.1.15 or
     above; that release of CUPS fixes some important bugs.  Gutenprint
     supports CUPS 1.2, and supports the CUPS 1.2 enhancements,
@@ -251,13 +233,13 @@ B) CUPS
     (openssl-devel) will be required.  Failure to install these
     packages will lead to errors when the package is compiled.
 
-    Installing the CUPS driver for Gutenprint 5.1 will not interfere
+    Installing the CUPS driver for Gutenprint 5.2 will not interfere
     with your ability to continue using the Gutenprint 5.0 or
     Gimp-Print 4.2 CUPS driver.
 
     The Gutenprint CUPS driver consists of the following components:
 
-    * The core Gutenprint CUPS driver, rastertogutenprint.5.1.  This
+    * The core Gutenprint CUPS driver, rastertogutenprint.5.2.  This
       is a CUPS filter that converts CUPS raster data into
       printer-specific data.  This is most commonly installed in
       /usr/lib/cups/filter.
@@ -274,7 +256,7 @@ B) CUPS
       /usr/share/cups/model/gutenprint.  These PPD files can only be
       used by the precise version of Gutenprint that they were built
       with; for example, it is not possible to use PPD files from
-      Gutenprint 5.0.0 with Gutenprint 5.1.0.
+      Gutenprint 5.0.0 with Gutenprint 5.2.0.
 
       If you are using CUPS 1.2 or above, these PPD files are not
       actually installed by default.  Instead, a CUPS driver generates
@@ -286,11 +268,11 @@ B) CUPS
       starting from 4.3.21.  This is normally installed in /usr/sbin.
       This utility cannot update PPD files from Gimp-Print 4.2.
 
-    * A utility to generate PPD files, cups-genppd.5.1.  Normally this
+    * A utility to generate PPD files, cups-genppd.5.2.  Normally this
       is only required when the package is built, and only with CUPS
       1.1.
 
-    * A driver to generate PPD files on the fly, gutenprint.5.1.  This
+    * A driver to generate PPD files on the fly, gutenprint.5.2.  This
       is normally used to generate PPD files on the fly with CUPS 1.2
       and above.
 
@@ -389,9 +371,9 @@ B) CUPS
     procedure.  This script will automatically update Gutenprint PPD
     files from earlier versions.  This script will only update PPD
     files from earlier versions of Gutenprint; it will not update
-    Gimp-Print 4.2 PPD files.  However, you may install Gutenprint 5.1
+    Gimp-Print 4.2 PPD files.  However, you may install Gutenprint 5.2
     alongside Gimp-Print 4.2, and use both Gimp-Print 4.2 and
-    Gutenprint 5.1 drivers concurrently in separate printer queues.
+    Gutenprint 5.2 drivers concurrently in separate printer queues.
     Therefore, you need not convert a workflow based on Gimp-Print 4.2
     right away, but can gradually convert or even permanently use both
     drivers for different printer queues.
@@ -414,7 +396,7 @@ B) CUPS
 
     --enable-simplified-cups-ppds
 
-	Gutenprint 5.1 offers an option of creating simplified PPD
+	Gutenprint 5.2 offers an option of creating simplified PPD
 	files (containing only basic options and standard paper sizes)
 	in addition to PPD files offering all available options
 	(including all color correction options).  If this option is
@@ -438,7 +420,7 @@ B) CUPS
     --disable-cups-ppds-at-top-level
 
 	Normally, the PPD files are placed in
-	/usr/share/cups/model/gutenprint/5.1.  If this option is used,
+	/usr/share/cups/model/gutenprint/5.2.  If this option is used,
 	the PPD files are placed in /usr/share/cups/model.  There is
 	normally no good reason to use this option.
 
@@ -499,7 +481,7 @@ C) FOOMATIC
     Therefore, we no longer provide documentation on direct use of the
     Ghostscript driver without the Foomatic front end.
 
-    The Ghostscript driver in Gutenprint 5.1 is based on the IJS
+    The Ghostscript driver in Gutenprint 5.2 is based on the IJS
     protocol.  IJS is a protocol originally developed by
     Hewlett-Packard to allow new drivers to be used with Ghostscript
     without having to be compiled into Ghostscript.  As this driver
@@ -510,11 +492,11 @@ C) FOOMATIC
     maintain and required a complex procedure to integrate with
     Ghostscript.
 
-    Gutenprint 5.1 offers two Foomatic drivers, one supporting the
+    Gutenprint 5.2 offers two Foomatic drivers, one supporting the
     full range of options and the other supporting simplified options,
     as describe above under CUPS.  The full-featured driver is named
-    "gutenprint-ijs.5.1"; the simplified driver is named
-    "gutenprint-ijs-simplified.5.1".  This allows Gutenprint 5.1 to
+    "gutenprint-ijs.5.2"; the simplified driver is named
+    "gutenprint-ijs-simplified.5.2".  This allows Gutenprint 5.2 to
     coexist with Gimp-Print 4.2; both drivers may be installed and
     used (on separate printer queues, of course) on the same system.
 
@@ -536,7 +518,7 @@ C) FOOMATIC
     NOTES TO PACKAGERS: 
 
     * We recommend packaging the IJS driver
-      (/usr/bin/ijsgutenprint.5.1) and its man page
+      (/usr/bin/ijsgutenprint.5.2) and its man page
       (/usr/man/man1/ijsgutenprint.1.gz) together with the Foomatic
       data.
 
@@ -554,14 +536,14 @@ D) GIMP
     (2.0 and above), providing the ability to print images.  Please
     read the release notes in addition to this README, as there have
     been some changes in procedure since Gimp-Print 4.2 if you are
-    using certain versions of GIMP.  Gutenprint 5.1 no longer supports
+    using certain versions of GIMP.  Gutenprint 5.2 no longer supports
     GIMP 1.2.
 
     The enhanced Print plugin for GIMP replaces the Gimp-Print
     4.2-based plugin provided with GIMP 2.0 and 2.2.  As of the GIMP
     2.4, GIMP team provides a new Print plugin based on the GtkPrint
     framework.  This plugin provides standard printing capabilities,
-    but does not provide all of the new Gutenprint 5.1 features.
+    but does not provide all of the new Gutenprint 5.2 features.
     Therefore, the enhanced Print plugin for GIMP distributed with
     Gutenprint does not replace that plugin, but is installed
     alongside that plugin.
@@ -583,18 +565,18 @@ D) GIMP
 
     ./configure --enable-user-install
 
-    It is not possible for Gimp-Print 4.2 and Gutenprint 5.1 (or any
+    It is not possible for Gimp-Print 4.2 and Gutenprint 5.2 (or any
     future release) to coexist in the same installation of GIMP.  The
-    Gutenprint 5.1-based plugin can read settings from previous
+    Gutenprint 5.2-based plugin can read settings from previous
     versions of Gimp-Print, but the configuration file format in
-    Gutenprint 5.1 cannot be read by older versions of Gimp-Print.
+    Gutenprint 5.2 cannot be read by older versions of Gimp-Print.
 
     NOTE TO PACKAGERS:
 
     * The enhanced GIMP plugin, unlike the core library and the
       Foomatic and CUPS drivers, may not be installed concurrently
       with other versions.  For example, you may not install both the
-      Gimp-Print 4.2 and the Gutenprint 5.1 version of the Print
+      Gimp-Print 4.2 and the Gutenprint 5.2 version of the Print
       plugin, as they use different configuration file formats.
 
 
@@ -651,10 +633,10 @@ A) PRINTER INSTALLATION
     driver, so you may find more than one PPD file for your printer.
     Gutenprint PPD files are described as
 
-    Epson Stylus Photo R300 Foomatic/gutenprint-ijs.5.1
-    Epson Stylus Photo R300 Foomatic/gutenprint-ijs-simplified.5.1
-    Epson Stylus Photo R300 - CUPS+Gutenprint v5.1.0
-    Epson Stylus Photo R300 - CUPS+Gutenprint v5.1.0 Simplified
+    Epson Stylus Photo R300 Foomatic/gutenprint-ijs.5.2
+    Epson Stylus Photo R300 Foomatic/gutenprint-ijs-simplified.5.2
+    Epson Stylus Photo R300 - CUPS+Gutenprint v5.2.0
+    Epson Stylus Photo R300 - CUPS+Gutenprint v5.2.0 Simplified
 
     The "simplified" PPD files offer a basic set of options only, for
     selecting printer options, standard paper sizes, and basic quality
@@ -689,7 +671,7 @@ A) PRINTER INSTALLATION
     Gutenprint PPD files by the name of the PPD file, which will be
     something like:
 
-		    EPSON Stylus Photo EX - CUPS+Gutenprint v5.1.0(en)
+		    EPSON Stylus Photo EX - CUPS+Gutenprint v5.2.0(en)
 
     Linux users please note: If you are using CUPS 1.1.11 or higher,
     and you have a USB-connected printer, you must have a printer
